# ystocks-data

./: README.md  yahoogainers.ipynb
schedule/: main.py  pyproject.toml
testing/: data.csv  main.py  pyproject.toml  requirements.txt  requirements1.txt  stocks2.csv  stocks3.csv  stocks5.csv
yahoostocks/: app.py  app.wsgi  demo.csv  demo.py  flask.zunamelt.conf  requirements.txt
yahoostocks/static/files/: gainers.csv  losers.csv  mostactive.csv  trendingtickers.csv
yahoostocks/templates/: home.html  index.html
ystocks/: No error.csv  data1002.csv  data300.csv  data600.csv  main.py  pyproject.toml  requirements1.txt  stocks2.csv  yahoo_gainers1.csv  yahoo_gainers2.csv  yahoo_losers1.csv  yahoo_most_active1.csv  yahoo_nasdaq_current.csv  yahoo_nasdaq_future.csv  yahoo_trending1.csv
ystocks/templates/: gainersfile.html  gainerstable.html  losersfile.html  loserstable.html  mostactivefiles.html  mostactivetable.html  trendingfiles.html  trendingtable.html
