[tool.poetry]
name = "repl_python3_Flask"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
yfinance = "^0.1.70"
df2gspread = "^1.0.4"
fake-useragent = "^0.1.11"
gspread = "^5.3.0"
oauth2client = "^4.1.3"
schedule = "^1.1.0"
bs4 = "^0.0.1"
cffi = "^1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
